--- a/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Tabs.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Tabs.cshtml
@@ -39,8 +39,9 @@
                 <div class="text ellipsis name" dir="auto" ng-bind="::e.name"></div>
                 <div class="counter">
                     <ng-pluralize count="e.count"
-                                  when="{'one': '@BoxResources.SingleItem',
-                                            'other': '{{e.count}} @IndexResources.Items'}">
+                                  when="{'one': '{} @BoxResources.SingleItem',
+                                  'two': '{} @IndexResources.Items'
+                                            'other': '{} @IndexResources.Items'}">
                     </ng-pluralize>
                 </div>
             </div>
