--- a/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/_Gamification.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/_Gamification.cshtml
@@ -23,7 +23,7 @@
                     <md-progress-linear class="custom-progress-bar" md-mode="determinate" value="{{gb.data.progress}}"></md-progress-linear>
                     <div class="text">
                         <span class="title">@GamificationResources.NextLevelTItle:</span>
-                        <span class="value" ng-bind="gb.nextLevel"></span>
+                        <span class="value" ng-bind="gb.nextLevel + 1"></span>
                     </div>
                 </div>
                 <div class="badges gamification-data">
