--- a/Zbang.Cloudents.Mvc4WebRole/Views/User/Index2.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/User/Index2.cshtml
@@ -88,7 +88,7 @@
                         <td><md-icon class="like" md-svg-icon="b:like"></md-icon></td>
                     </tr>
                     <tr>
-                        <th>@GamificationResources.DocsPointsValueTitle:</th>
+                        <th>@IndexResources.Items:</th>
                         <td>@ReputationConst.ItemView</td>
                         <td>@ReputationConst.ItemDownload</td>
                         <td>@ReputationConst.ItemLike</td>
