--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/leaderboard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/leaderboard.less
@@ -416,9 +416,9 @@
                 img, .userLetter {
                     position: absolute;
                     top: 0;
-                    width: 100px;
-                    height: 100px;
-                    margin: 3px;
+                    margin: 6px;
+                    width: 100px !important;
+                    height: 100px !important;
                     border: 2px solid @textColorWhite;
 
                     @media(max-width: 600px) {
