--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/GeneralWithStatic.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/GeneralWithStatic.less
@@ -193,6 +193,7 @@ body {
                 padding: 0 10px;
                 text-transform: capitalize;
                 font-weight: normal;
+                text-align:left; //fix dir auto issue
             }
         }
 
@@ -203,6 +204,7 @@ body {
                 font-size: 12px;
                 display: block;
                 margin-top: 5px;
+                text-align:left; //fix dir auto issue
             }
         }
     }
