--- a/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Partials2/_commonTemplate.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Partials2/_commonTemplate.cshtml
@@ -138,5 +138,9 @@
                 </div>
             </div>
         </div>
+        <div class="extra-details">
+            <h5 ng-bind-html="::e.name"></h5>
+            <span ng-bind-html="::e.content"></span>
+        </div>
     </a>
 </script>
