--- a/Zbang.Cloudents.Mvc4WebRole/Views/Search/Index.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Search/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using Zbang.Cloudents.Mvc4WebRole.Views.Search.Resources
+﻿@using Zbang.Cloudents.Mvc4WebRole.Views.Flashcard.Resources
+@using Zbang.Cloudents.Mvc4WebRole.Views.Search.Resources
 @using Zbang.Cloudents.Mvc4WebRole.Views.Shared.Resources
 
 <div class="page-head indent-content">
@@ -20,9 +21,13 @@
         <md-tab md-on-select="s.changeTab('course')" md-active="s.tab === 'course'" ga-track-event="['search', 'search classes']">
             <md-tab-label>@GeneralResources.Classes</md-tab-label>
         </md-tab>
+        <md-tab md-on-select="s.changeTab('flashcard')" md-active="s.tab === 'flashcard'" ga-track-event="['search', 'search flashcard']">
+            <md-tab-label>@FlashcardResources.CardsLabel</md-tab-label>
+        </md-tab>
         <md-tab md-on-select="s.changeTab('quiz')" md-active="s.tab === 'quiz'" ga-track-event="['search', 'search quizzes']">
             <md-tab-label>@GeneralResources.Quizzes</md-tab-label>
         </md-tab>
+
     </md-tabs>
 
     <div class="tab-content" ng-switch="s.tab">
@@ -55,6 +60,17 @@
         <div ng-switch-when="quiz">
             <div layout="row" layout-padding layout-wrap>
                 <div flex-gt-lg="25" flex-lg="33" flex-md="50" flex-sm="50" flex-xs="100" ng-repeat="e in s.result" ng-include="'quiz-template.html'"></div>
+            </div>
+            <div class="no-results" ng-show="s.noResults">
+                <div class="text-wrapper">
+                    <h2>@GeneralResources.NoResultsTitle</h2>
+                    <div>@GeneralResources.SearchEmptyStateQuizzesText</div>
+                </div>
+            </div>
+        </div>
+        <div ng-switch-when="flashcard">
+            <div layout="row" layout-padding layout-wrap>
+                <div flex-gt-lg="25" flex-lg="33" flex-md="50" flex-sm="50" flex-xs="100" ng-repeat="e in s.result" ng-include="'flashcard-template.html'"></div>
             </div>
             <div class="no-results" ng-show="s.noResults">
                 <div class="text-wrapper">
