--- a/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Tabs.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Tabs.cshtml
@@ -40,7 +40,7 @@
                 <div class="counter">
                     <ng-pluralize count="e.count"
                                   when="{'one': '{} @BoxResources.SingleItem',
-                                  'two': '{} @IndexResources.Items'
+                                  'two': '{} @IndexResources.Items',
                                             'other': '{} @IndexResources.Items'}">
                     </ng-pluralize>
                 </div>
