--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/user.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/user.less
@@ -140,6 +140,7 @@
                 min-width: 120px;
                 width: 1%;
                 line-height: 36px;
+                text-transform: capitalize;
             }
 
             tr:nth-child(even) {
