--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/user.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/user.rtl.css
@@ -159,6 +159,7 @@
   min-width: 120px;
   width: 1%;
   line-height: 36px;
+  text-transform: capitalize;
 }
 .userPage .points-info table tr:nth-child(even) {
   background: rgba(115, 180, 53, 0.3);
