--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
@@ -729,7 +729,7 @@ md-input-container .md-input-message-animation:not(.ng-animate) {
 
 //add section
 .ads {
-    padding: 4px;
+    padding: 14px 4px 4px 4px;
     -ms-flex: 1;
     -webkit-flex: 1;
     flex: 1;
