--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.less
@@ -861,6 +861,7 @@ md-menu-item {
     z-index: 11;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
     padding: 0;
+    bottom: auto;
 
     .md-toast-content {
         background: @gamificationMediumGreen;
