--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.rtl.css
@@ -546,7 +546,7 @@ md-input-container .md-input-message-animation:not(.ng-animate) {
   stroke: #3f51b5;
 }
 .ads {
-  padding: 4px;
+  padding: 14px 4px 4px 4px;
   -ms-flex: 1;
   -webkit-flex: 1;
   flex: 1;
