--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/user.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/user.css
@@ -4,6 +4,7 @@
   display: flex;
   -webkit-justify-content: flex-start;
   justify-content: flex-start;
+  margin-top: 30px;
   /*#show-points-info {
         display: none;
     }*/
