--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/user.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/user.less
@@ -3,7 +3,7 @@
 .userPage {
     .displayFlex;
     .justifyContet(flex-start);
-
+    margin-top: 30px;
     .portlet {
         margin-bottom: 0; //override
         border-radius: 0; //override
