--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.less
@@ -1,5 +1,5 @@
 ﻿@import "variables.less";
-@actionsNavHeight: 90px;
+@actionsNavHeight: @heightOfHeader;
 
 md-menu-item {
     .fb-like svg {
@@ -53,7 +53,7 @@ md-menu-item {
         position: relative;
         min-height: @actionsNavHeight;
         display: block;
-        padding: 6px 0;
+        padding: 4px 0;
         .displayFlex;
         flex-direction: column;
         .align-items(center);
@@ -337,6 +337,11 @@ md-menu-item {
                 flex-shrink: 1;
                 flex-grow: 0;
                 overflow: hidden;
+
+                .achievements, .name {
+                    line-height: 14px;
+                    font-size: 12px;
+                }
             }
 
             a, span {
@@ -348,13 +353,13 @@ md-menu-item {
                 padding-right: 5px;
                 font-size: 12px;
             }
-        }
 
-        .achievements {
-            padding-left: 0;
-            margin-left: 10px;
-            text-overflow: initial;
-            flex-shrink: 0;
+            .achievements {
+                padding-left: 0;
+                margin-left: 10px;
+                text-overflow: initial;
+                flex-shrink: 0;
+            }
         }
     }
 
