--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/quiz.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/quiz.less
@@ -339,10 +339,10 @@
         }
 
         .userblock {
-            position: relative;
+            min-width: 0;
 
             .user-name {
-                padding-bottom: 16px;
+                padding-bottom: 0;
 
                 @media(max-width:600px) {
                     margin-left: 12px;
@@ -352,8 +352,7 @@
 
         .comment-date {
             margin-left: 12px;
-            position: absolute;
-            bottom: 14px;
+            padding: 0 20px 0 0;
         }
 
         .content-text {
