--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/staticPage.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/staticPage.less
@@ -1613,7 +1613,7 @@ iframe {
                     border: none;
                     padding: 8px;
                     border-radius: 16px;
-                    width: 200px;
+                    min-width: 200px;
                     color: @textColorWhite;
                     text-decoration: none;
                     margin-bottom: 20px;
@@ -1627,7 +1627,7 @@ iframe {
                         font-weight: bold;
                         margin: 0 auto;
                         display: block;
-                        width: 276px;
+                        min-width: 276px;
                     }
                 }
             }
