--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/staticPage.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/staticPage.rtl.css
@@ -1412,7 +1412,7 @@ iframe {
   border: none;
   padding: 8px;
   border-radius: 16px;
-  width: 200px;
+  min-width: 200px;
   color: #ffffff;
   text-decoration: none;
   margin-bottom: 20px;
@@ -1427,7 +1427,7 @@ iframe {
   font-weight: bold;
   margin: 0 auto;
   display: block;
-  width: 276px;
+  min-width: 276px;
 }
 .homePage .home-page-body > section,
 .homePage .home-page-body footer {
