--- a/Zbang.Cloudents.Mvc4WebRole/Views/Item/Index2.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Item/Index2.cshtml
@@ -102,7 +102,7 @@
         <a class="arrow prev" ng-if="i.details.previous" href="{{i.details.previous}}" hide-xs keyboard-action="37" ga-track-event="['itemPage', 'previous item']">
             <md-icon md-svg-icon="t:arrow"></md-icon>
         </a>
-        @*<div class="preview" ng-bind-html="i.preview"></div>*@
+        <div class="preview" ng-bind-html="i.preview"></div>
         <div class="preview" ng-include="i.view"></div>
         <a class="arrow next" ng-if="i.details.next" href="{{i.details.next}}" hide-xs keyboard-action="39" ga-track-event="['itemPage', 'next item']">
             <md-icon md-svg-icon="t:arrow"></md-icon>
