--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/user.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/user.less
@@ -4,6 +4,7 @@
     .displayFlex;
     .justifyContet(flex-start);
     margin-top: 30px;
+
     .portlet {
         margin-bottom: 0; //override
         border-radius: 0; //override
@@ -702,6 +703,10 @@
                     text-transform: capitalize;
                 }
             }
+        }
+
+        .post-content {
+            word-break: break-word;
         }
 
         .post-headline {
