--- a/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Feed.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Feed.cshtml
@@ -14,7 +14,7 @@
                 </button>
             </div>
             <div class="option-wrapper">
-                <button class="option share" type="button" scroll-to-top ng-click="b.share()">
+                <button class="option share" type="button" scroll-to-top ng-click="b.share()" user-not-register-popup="click">
                     <div>
                         <md-icon md-svg-icon="t:share" class="option-icon"></md-icon>
                         <span class="text">@UserResources.Share</span>
